feat: get message history
